kube-clusters/apps/media/plex/general-default.yaml
---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: plex-local-mvd-sh
#   namespace: default # This namespace should be the same as where the service runs
# spec:
#   secretName: plex-local-mvd-sh-tls
#   issuerRef:
#     name: letsencrypt-production
#     kind: ClusterIssuer
#   commonName: "plex.local.mvd.sh"
#   dnsNames:
#     - "plex.local.mvd.sh"
# ---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external  
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`plex2.local.mvd.sh`)
    kind: Rule
    services:
    - name: plex-plex-media-server
      port: 32400
    middlewares:
      - name: default-headers
      - name: plex-whitelist
      # - name: test-headers
  # tls:
  #   secretName: plex-local-mvd-sh-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: plex-whitelist
  namespace: default
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.0.0/16
      - 10.50.5.30
      - 10.50.5.31
      - 10.50.5.32      
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: plex
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external  
spec:
  entryPoints:
    - plex
  routes:
  - match: HostSNIRegexp(`plex.direct`, `{subdomain:\S*}.plex.direct`)
    services:
    - name: plex-plex-media-server
      port: 32400
      weight: 10
      terminationDelay: 400
    middlewares:
    - name: plex-direct-whitelist
  tls:
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: plex-domain
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external  
spec:
  entryPoints:                  # [1]
    - plex
  routes:                       # [2]
  # - match: HostSNI(`plex2.mvd.sh`)
  - match: ClientIP(`10.50.5.30`, `10.50.5.31`, `10.50.5.32`, `192.168.0.0/16`)
  
  # \S*.plex.direct
    services:                   # [4]
    - name: plex-plex-media-server                 # [5]
      port: 32400                # [6]
      weight: 10                # [7]
      terminationDelay: 400     # [8]
    middlewares:
      - name: plex-direct-whitelist
    # - name: defaulttcp-headers
    # - name: testtcp-headers
  # tls:                          # [9]
    # secretName: supersecret     # [10]
    # options:                    # [11]
    #   name: opt                 # [12]
    #   namespace: default        # [13]
    # certResolver: foo           # [14]
    # domains:                    # [15]
    # - main: example.net         # [16]
    #   sans:                     # [17]
    #   - a.example.net
    #   - b.example.net
    # passthrough: true          # [18]
