kube-clusters/apps/media/plex/general.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external  
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`plex.local.mvd.sh`)
    kind: Rule
    services:
    - name: plex-plex-media-server
      port: 32400
    middlewares:
      - name: default-headers
      - name: plex-whitelist
      # - name: test-headers
  tls:
    secretName: plex-local-mvd-sh-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: plex-whitelist
  namespace: default
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.0.0/16
      - 10.50.5.30
      - 10.50.5.31
      - 10.50.5.32      
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: plex
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external  
spec:
  entryPoints:
    - plex
  routes:
  - match: HostSNIRegexp(`plex.direct`, `{subdomain:\S*}.plex.direct`)
    services:
    - name: plex-plex-media-server
      port: 32400
      weight: 10
      terminationDelay: 400
    middlewares:
    - name: plex-direct-whitelist
  tls:
    passthrough: true
